--- a/investigacion.tex
+++ b/investigacion.tex
@@ -221,6 +221,19 @@ El sueño de la teletransportación es el de ser capaz de viajar simplemente rea
 El problema de la teletransportación de una partícula cuántico bajo este esquema clásico es que no puede ser medida con precisión. Esté es el principio de incertidumbre de Heisenberg. Si una partícula es medida u observada en el momento de teletransportarse, se destruirían todos sus otros estados y la precisión de la medición es improbable. Entonces, el artículo destaca que Bennett et al. propone la posibilidad de transferir un estado cuántico de una partícula en otra sin tener que obtener información en el proceso. Proponen que esto es posible gracias al entrelazamiento. (Bouwmeester et al., 1997)
 
 Explicar el proceso por el cual se logra transferir el estado de una partícula a otro a es algo complicado. Decidimos entonces exponer una aplicación de directa de la computación cuántica en la computación e informática. Si pudieramos tranferir el estado de un qubit a otro podríamos tener un nuevo sistema de envío de datos. En el periódico \textit{The New York Times} encontramos una noticia sobre un grupo de científicos de los Países Bajos lograron teletransportar la información de un qubit a otro estando a tres metros de distancia. Este logro los motiva a continuar sus esfuerzo por lograr una teletransportación a distancias más largas. Si lo logran, este será un paso muy grande para la demostración del fenómeno del entrelazamiento y la mecánica cuántica en general. (Markoff, 2014)
+\clearpage
+\part{D-Wave Systems}
+\section*{Historia del D-Wave}
+D-Wave Systems es la primera companía privada comercial que ofrece computación cuántica. Se basa en el principio de la computación cuántica como herramienta para resolver algunos de los problemas más complejos a nivel mundial. Esperan que la computación cuántica pueda llevar a nuevos descubrimientos en ciencia, ingeniería, modelos en computación, simulación, análisis financiero, optimización, lógica.
+
+Fue fundada en 1999 por Geordie Rose, Haig Farris y Alexandre Zagoskin, que se encontraron en la Universidad de British Columbia (UBC). El nombre D-Wave viene de los primeros diseños de qubits que plantearon, que usaban superconductores de tipo d-wave. Empezó como una rama de UBC con lazos muy fuertes con el Departamento de Física y 
+Astronomía, ya que ellos proporcionaban los fondos para investigación en la computación cuántica. 
+Por cinco años la companía trabajó para recopilar propiedad intelectual e ideas de cómo la computación cuántica podía volverse una realidad. Más que investigación académica, estaban enfocados en cómo diseñar las computadoras cuánticas, cuál es el proceso de manufactura y cómo se pueden producir en masa. 
+
+Para el 2004, después de varios intentos de buscar opciones de terceros para construir las computadoras, tomaron la decisión de construir las computadoras ellos mismos. Construyeron sus propias facilidades para producir las partes necesarias y los procesadores con efectos cuánticos. También armaron un equipo de científicos para diseñar, fabricar y probar los procesadores en sus propios laboratorios. 
+
+En el 2010 lanzaron la primera computadora cuántica comercial, la D-Wave One. Para el 2013 lanzaron la D-Wave Two, que tiene 512 qubits. 
+Hoy en día es reconocida como una de las compañías pioneras en computadoras cuánticas basadas en superconductores. Tiene más de 100 patentes y sus sistemas son utilizados por organizaciones reconocidas mundialmente. Tienen varias oficinas: Vancouver, Canada, Palo Alto, California y Washington DC. 
 
 \clearpage
 \begin{thebibliography}{X}
