--- a/investigacion.tex
+++ b/investigacion.tex
@@ -1,19 +1,53 @@
 \documentclass[11pt,a4paper]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[spanish]{babel}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
+ \graphicspath{ {images/} }
 \usepackage{makeidx}
 \usepackage{verbatim} 
-\author{Arias E., Sagasti A.}
-\date{\today}
-\title{Tesla cantaba Kumbaya alrededor de su bobina}
 \begin{document}
+
 \begin{titlepage}
-\maketitle
+
+\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} 
+
+\center
+
+\textsc{\LARGE Universidad de Costa Rica}\\[1.5cm]
+\textsc{\Large Escuela de Ciencias de la Computación e Informática}\\[0.5cm] 
+\textsc{\large CI-1210 Diseño de Circuitos Digitales}\\[0.5cm] 
+
+\HRule \\[0.4cm]
+{ \huge \bfseries Tesla cantaba Kumbaya alrededor de su bobina}\\[0.4cm] % Title of your document
+\HRule \\[1.5cm]
+
+\begin{minipage}{0.4\textwidth}
+\begin{flushleft} \large
+\emph{Autores:}\\
+Amanda \textsc{Sagasti}
+Emmanuel \textsc{Arias} 
+\end{flushleft}
+\end{minipage}
+~
+\begin{minipage}{0.4\textwidth}
+\begin{flushright} \large
+\emph{Profesor:} \\
+Sanders \textsc{Pacheco A.} % Supervisor's Name
+\end{flushright}
+\end{minipage}\\[4cm]
+
+{\large 30 de Junio, 2014}\\[3cm] 
+
+\vfill 
+
 \end{titlepage}
+
+\tableofcontents 
+\clearpage
+
+
 \part{Conceptos Fundamentales}
 \index{Conceptos Fundamentales}
 En este capítulo vamos a desarrollar las bases necesarias para poder llegar a un pleno entendimiento de la investigación. Es una especie de marco teórico donde se abarcará la terminología básica de ciertos conceptos matemáticos y computacionales tratados en los siguientes capítulos. No debe entenderse como un glosario o un capítulo de definiciones sino que, este es el comienzo de la investigación en su etapa más básica.
@@ -120,8 +154,13 @@ La habilidad de un qubit de estar en un estado superpuesto va en contra del ente
 
 Los qubits son reales, y varios sistemas físicos se pueden utilizar para hacer qubits. Por ejemplo, se pueden realizar con las dos distintas polarizaciones de un fotón, con el alineamiento del espín nuclear en un campo magnético uniforme, como dos estados de un electrón orbitando un átomo. (Nielsen, 2010, p.14) 
 
-La representación geométrica de un qubit se puede apreciar en la figura 1.1
-Me falta meter la foto hu3hu3hu3. Hay que ponerle el full file path o algo,  y prefiero hacerlo al final. 
+La representación geométrica de un qubit se puede apreciar en la figura 1
+
+\begin{figure}
+\centering
+\includegraphics[width=0.45\textwidth]{qubit}
+\caption{Representación geométrica de un qubit (wikimedia.org)}
+\end{figure}
 
 Los cambios que le suceden a un estado cuántico se pueden describir usando la computación cuántica. De la misma manera que una computadora clásica está construida con base en circuitos lógicos, una computadora cuántica se basa en circuitos cuánticos con compuertas cuánticas elementales.
  
@@ -223,33 +262,115 @@ El problema de la teletransportación de una partícula cuántico bajo este esqu
 Explicar el proceso por el cual se logra transferir el estado de una partícula a otro a es algo complicado. Decidimos entonces exponer una aplicación de directa de la computación cuántica en la computación e informática. Si pudieramos tranferir el estado de un qubit a otro podríamos tener un nuevo sistema de envío de datos. En el periódico \textit{The New York Times} encontramos una noticia sobre un grupo de científicos de los Países Bajos lograron teletransportar la información de un qubit a otro estando a tres metros de distancia. Este logro los motiva a continuar sus esfuerzo por lograr una teletransportación a distancias más largas. Si lo logran, este será un paso muy grande para la demostración del fenómeno del entrelazamiento y la mecánica cuántica en general. (Markoff, 2014)
 \clearpage
 \part{D-Wave Systems}
-\section*{Historia del D-Wave}
-D-Wave Systems es la primera companía privada comercial que ofrece computación cuántica. Se basa en el principio de la computación cuántica como herramienta para resolver algunos de los problemas más complejos a nivel mundial. Esperan que la computación cuántica pueda llevar a nuevos descubrimientos en ciencia, ingeniería, modelos en computación, simulación, análisis financiero, optimización, lógica.
+\section*{Historia y objetivos de D-Wave Systems}
+D-Wave Systems es la primera companía privada comercial que ofrece computación cuántica. Se basa en los principios de que la computación cuántica tiene el potencial de resolver algunos de los problemas más complejos alrededor del mundo. Esperan que la computación cuántica pueda llevar a nuevos descubrimientos en ciencia, ingeniería, modelos en computación, simulación, análisis financiero, optimización, lógica...
 
-Fue fundada en 1999 por Geordie Rose, Haig Farris y Alexandre Zagoskin, que se encontraron en la Universidad de British Columbia (UBC). El nombre D-Wave viene de los primeros diseños de qubits que plantearon, que usaban superconductores de tipo d-wave. Empezó como una rama de UBC con lazos muy fuertes con el Departamento de Física y 
-Astronomía, ya que ellos proporcionaban los fondos para investigación en la computación cuántica. 
+Fue fundada en 1999 por Geordie Rose, Haig Farris y Alexandre Zagoskin, que se encontraron en la Universidad de British Columbia (UBC). El nombre D-Wave viene de los primeros diseños de qubits que plantearon, que usaban superconductores de tipo d-wave. Empezó como una rama de UBC con lazos muy fuertes con el Departamento de Física y Astronomía, ya que ellos proporcionaban los fondos para investigación en la computación cuántica. El objetivo de D-Wave es integrar nuevos descubrimietos en física y computación para producir nuevos avances en la computación cuántica.
+
 Por cinco años la companía trabajó para recopilar propiedad intelectual e ideas de cómo la computación cuántica podía volverse una realidad. Más que investigación académica, estaban enfocados en cómo diseñar las computadoras cuánticas, cuál es el proceso de manufactura y cómo se pueden producir en masa. 
+Para el 2004, después de varios intentos de buscar opciones de terceros para construir las computadoras, tomaron la decisión de construir las computadoras ellos mismos. Construyeron sus propias facilidades para producir las partes necesarias y los procesadores que simulaban efectos cuánticos. También armaron un equipo de científicos para diseñar, fabricar y probar los procesadores en sus propios laboratorios. 
 
-Para el 2004, después de varios intentos de buscar opciones de terceros para construir las computadoras, tomaron la decisión de construir las computadoras ellos mismos. Construyeron sus propias facilidades para producir las partes necesarias y los procesadores con efectos cuánticos. También armaron un equipo de científicos para diseñar, fabricar y probar los procesadores en sus propios laboratorios. 
+En el 2010 lanzaron la primera computadora cuántica comercial, la D-Wave One, y para el 2013 lanzaron la D-Wave Two, que tiene 512 qubits. Instalaron la D-Wave Two en los laboratorios de Inteligencia Artificial Cuántica administrados por Google, NASA y USRA. 
 
-En el 2010 lanzaron la primera computadora cuántica comercial, la D-Wave One. Para el 2013 lanzaron la D-Wave Two, que tiene 512 qubits. 
-Hoy en día es reconocida como una de las compañías pioneras en computadoras cuánticas basadas en superconductores. Tiene más de 100 patentes y sus sistemas son utilizados por organizaciones reconocidas mundialmente. Tienen varias oficinas: Vancouver, Canada, Palo Alto, California y Washington DC. 
+Hoy en día es reconocida como una de las compañías pioneras en computadoras cuánticas basadas en superconductores. Fue nombrada como una de las 50 compañías más inteligentes de acuerdo al MIT Technology Review de este año. Tiene más de 100 patentes y sus sistemas son utilizados por organizaciones reconocidas mundialmente. Tienen varias oficinas: Vancouver, Canada; Palo Alto, California y Washington DC. 
+
+\section*{La computadora Cuántica D-Wave}
+\subsection*{Introducción a la computadora D-Wave}
+
+La computadora D-Wave utiliza los principios de la mecánica cuántica para resolver problemas computacionales. Gracias a los algoritmos cuánticos es posible resolver tareas complejas en un tiempo mucho menor que con una computadora clásica. La computadora D-Wave no hace todas las operaciones que hace una normal, sino que está construida especialmente para resolver problemas de optimización. (D-Wave Systems, 2014)
+
+Entonces, cúal es la diferencia entre una computadora cuántica y una computadora clásica. D-Wave Systems expone una analogía entre estas estructuras. Imaginemonos un mapa con valles y montañas. Resolver un problema de optimización sería como encontrar el punto más bajo en este mapa. Una computadora clásica utilizaría un algoritmo que recorrería todos los puntos posibles del mapa y los analiza hasta luego conseguir el mejor resultado. El procesamiento de la D-Wave es capaz de considerar todas las posibilidades al mismo tiempo y le devuelve al usuario un conjunto que incluye no solo al mejor resultado sino a otros resultados también. (D-Wave Systems, 2014)
+
+Siguiendo este ejemplo, si un usuario quisiera resolver este problema, primero expresa su problema en un lenguaje adecuado a D-Wave y se conectaría a la computadora mediante una red, como si fuera un dispositivo periférico. Luego de enviar el problema, la máquina se encarga de hacer operaciónes cuánticas para luego darle al usuario la respuesta al problema.  (D-Wave Systems, 2014)
+
+La computadora D-Wave es capaz de resolver problemas como por ejemplo: optimización, análisis financiero, aprendizaje de máquina, reconocimiento de patrones, detección de anomalías, verificación de software y hardware, entre otras. (D-Wave Systems, 2014) Vemos que las aplicaciones son muy enriquecedoras en ciertos campos, tanto como científicos, comerciales y militares, por lo que dedicaremos un apartado más adelante a estas posibles aplicaciones.
+
+\subsection*{Hardware del D-Wave}
+Para hablar un poco sobre la mecánica del hardware del D-Wave vamos a referirnos a tres entornos: adentro del procesador, afuera del procesor y la máquina en general.
+
+En cuanto al procesador hay una singularidad importante. En una computadora clásica, la forma en la que se almacenan los bits es mediante transistores. Estos están conectados a un bus de datos y la forma en que se escriben los datos es regulando el voltaje en los transistores. En cambio, el D-Wave necesita un medio para almacenar qubits, y un transistor no se puede utilizar. Entonces, el procesador esta conformado por una unidad básica llamada SQUID. En esta estructura los electrones pueden comportarse en forma de onda, las cuales dan las propiedades y efectos cuánticos. En contraste con un transistor que está hecho de silicio, este dispositivo está hecho de niobio. Cuando este metal se enfría se transforma en un superconductor, permitiéndo que fluya en el propiedades cuánticas.(D-Wave Systems, 2014)
+
+Para ser más gráficos, en la siguiente figura tenemos respectivamente un transistor CMOS y un SQUID (nombre que se le da al dispositivos que almacena quibts en el D-Wave):
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.45\textwidth]{cmos}
+\includegraphics[width=0.45\textwidth]{squid}
+\caption{Esquemas de un transistor CMOS y un SQUID (wikipedia.org, 2014) (D-Wave Systems, 2014)}
+\end{figure}
+
+En el CMOS podemos ver que tenemos las entradas para los voltajes que hacen que el transistor almacene cierto estado. En el SQUID el anillo de niobio y dos flechas, estas corresponden a un campo magnético. A las direcciones de este campo se les conoce como +1 y -1. En estos estados se puede plasmar la superposición de un qubit en sus dos estados.
+
+Estos quibts se acomodan en un serie de acoples hechos de material superconductor para poder tener un circuito de qubits programables. Para mapear estos qubits se utilizan switches con los cuales se les asignan direcciones. (D-Wave Systems, 2014)
+
+Una vez que se tuvo diseñado el circuito del procesador y de hacer los esquemas, se comienza la manufactura del mismo. Para esto, se usó una galleta de silicio para colocar todos los componentes. Como vemos el proceso se asemeja al de la manufactura de un procesador clásico. (D-Wave Systems, 2014) En la siguiente figura vemos un procesador de un D-Wave One.
+\clearpage
+\begin{figure}
+\centering
+\includegraphics[width=0.45\textwidth]{proce}
+\caption{Fotografía de una galleta de procesadores Rainier, incluyendo el procesador de 128 qubits usado en el D-Wave One (D-Wave Systems, 2014)}
+\end{figure}
+
+Para construir la computadora, se toma uno de estos procesadores y se empaqueta en un sistema de circuitos que mantiene todas las conexiones. Para que este procesador funcione se necesita que se enfríe a una temperatura sumamente baja. Se requieren aproximadamente 80 mK ($-273^o$C). Esta temperatura es 150 veces más fría que el espacio interestelar, solo $0.02^o$C por encima del cero absoluto. Esta temperatura se logra usando helio como enfriador. El líquido reside en una cámara por aparte y el procesador se enfría "en seco". La refrigeración es viable y mantenible comercialmente. (D-Wave Systems, 2014)
+
+El procesador es afectado directamente por campos magnéticos, por lo que D-Wave tiene sumo cuidado con estos. La computadora crea un escudo de campos magnéticos que contrarestan en su totalidad los campos magnéticos que puedan quere atravesar el cajón donde está el procesador. (D-Wave Systems, 2014)
+
+En referencia al contenedor de la computadora, además de tener el escudo magnético tiene además una protección contra radiofrecuencias electromagnéticas. Más aún, solo hay una salida del cajón con el exterior y es un canal óptico por el cual los datos entran y los resultados salen.  (D-Wave Systems, 2014)
+
+Si vemos un D-Wave en su totalidad observamos una gran caja negra. Este contenedor tiene el espacio donde está el procesador además de los gabinetes donde van los sistemas de enfriamiento y el sistema de control. La siguiente figura muestra dos D-Wave One.
+\clearpage
+\begin{figure}
+\centering
+\includegraphics[width=0.45\textwidth]{dwave}
+\caption{Dos D-Wave One siendo probados en el laboratorio (D-Wave Systems, 2014)}
+\end{figure}
+
+El método de conexión al D-Wave se basa en computación en nube. El D-Wave tiene su propio servido que tiene una cola de tareas por hacer. Este modelo permite que este tipo de computación sea muy accesible a un gran número de personas. En la figura anterior vemos el esquema que tiene un D-Wave en una conexión de área local.
+
+\begin{figure}
+\centering
+\includegraphics[width=0.45\textwidth]{esquema}
+\caption{Esquema de conexión de un D-Wave (D-Wave Systems, 2014)}
+\end{figure}
+
+\clearpage
+\subsection*{Aplicaciones y usuarios del D-Wave}
+Como ya lo habíamos mencionado, el D-Wave se centra en problemas de optimización. Pero en general D-Wave Systems nos da varios ejemplos de este tipo de problemas. Por ejemplo, se podría optimizar redes de tuberías de agua. Con un software se modelan las especificaciones y la computadora se encargaría de ofrecer la mejor solución. Otro problema es el de optimizar las dosis de radioterapia en un paciente. Como esto lleva muchas variables a considerar para que el tratamiento tenga el menor impacto en el cuerpo, la capaciadad de procesamiento de la computación cuántica podría ser un gran avance.(D-Wave Systems, 2014)
+
+En el campo de la ciencia tenemos el ejemplo de analizar el plegamiento de las proteínas. Con la computación cuántica se pueden explorar los posibles plegamientos que pueden tener estas moléculas. D-Wave en conjunto con investigadores de la universidad de Harvard diseñaron un sistema que predice los patrones de plegamiento de proteínas y han logrado pequeñas simulaciones. (D-Wave Systems, 2014)
+
+Con respecto a la robótica se podría usar la computación cuántica para aprender compotamiento y procesar imágenes y video. Uno de los limitantes de los programadores actualmente es la dificultad de desarrollar algoritmos que hagan que una máquina aprenda comportamientos. Como el procesamiento de grandes árboles de datos es un problema para las computadoras clásicas, la capacidad de optimización de la computación cuántica puede ser útil en este caso. (D-Wave Systems, 2014)
+
+Y cuáles industrias podrían estar interesadas en la computación cuántica. Podríamos mencionar universidades, laboratorios, compañias financieras, compañías energéticas, defensa y militares y hasta la misma web. (D-Wave Systems, 2014)
+
+Actualmente, D-Wave tiene clientes importantes, uno de ellos es la NASA y Google. Estos, en colaboración con la Asociación de Universidades de Investigación Espacial crearon en el 2013 el Laboratorio Cuántico de Inteligencia Artificial (QuAIL siglas en inglés). Google se centra en mejorar modelos de optimización con la computación cuántica. La NASA intenta demostrar que tanto esta como los algoritmos cuánticos pueden cambiar tareas de optimización como reconocimiento de patrones, tráfico aéreo, navegación, robótica, comunicaciones entre otros. (D-Wave Systems, 2014)
+
+El primer cliente de D-Wave fue Lockheed Martin. Es uno de los contratistas en defensa más grande del mundo. Con la D-Wave logró identificar en seis semanas un error en una pieza de código de un F-16 de hace 30 años que le tomo a su compañia meses en averiguar. Martin trabaja en Aeronaútica, Sistemas de Información y soluciones militares. Él disela systemas complejos, aunque mucho del trabajo pesado consiste en verificar y validar. El grupo de trabajo de Martin intenta reducir el costo y tiempo de este trabajo con la computación cuántica.
+
+El D-Wave que compró Martin, cabe destacar que fue el primer D-Wave comercialmente disponible, está en el Instituto de Ciencias de la Información de la Universidad del Sur de California. Este instituto está posicionado a la cabeza de la investigación en computación cuántica.
+
 
 \clearpage
 \begin{thebibliography}{X}
 \bibitem{etiqueta} \textsc{Autor, A.} (año). \textit{Título del libro.} Lugar: Editorial
 \bibitem{revistaonline} \textsc{Autor, A.} (año). Título del artículo. \textit{Revista}, n, pp. doi: (o recuperado de)
 \bibitem{periodico} \textsc{Autor, A.} (año). Título de la notica. \textit{Periodico} Recuperado de
-\bibitem{aczel} \textsc{Aczel, A.} (año). \textit{ENTANGLEMENT The Greatest Mystery in Physics.} (E. Arias, Trad.) New York: Four Wall Eight Windows
+\bibitem{aczel} \textsc{Aczel, A.} (año). \textit{ENTANGLEMENT The Greatest Mystery in Physics.} New York: Four Wall Eight Windows
 \bibitem{arce} \textsc{Arce, C., Castillo, W., González, J.} (2003). \textit{Álgebra Lineal.} Lugar: Editorial
 \bibitem{bouwmeester} \textsc{Bouwmeester, D., Pan J., Mattle K., Eibl M., Weinfurter H., Zeilinger A.} (1997). Experimental quantum teleportation. \textit{Nature}, 390, 575-579. doi:10.1038/37539
-\bibitem{herken} \textsc{Herken, R. (Ed.)} (1988). \textit{The Universal Turing Machine. A Half-Century Survey.} (E. Arias, Trad.) Oxford University Press
+\bibitem{dwave2} \textsc{D-Wave Systems} (2014). Applications. Recuperado de http://www.dwavesys.com/quantum-computing/applications
+\bibitem{dwave4} \textsc{D-Wave Systems} (2014). Customers. Recuperado de http://www.dwavesys.com/our-company/customers
+\bibitem{dwave3} \textsc{D-Wave Systems} (2014). Industries. Recuperado de http://www.dwavesys.com/quantum-computing/industries
+\bibitem{dwave6} \textsc{D-Wave Systems} (2014). Introduction to the D-Wave Quantum Hardware. Recuperado de http://www.dwavesys.com/tutorials/background-reading-series/introduction-d-wave-quantum-hardware
+\bibitem{dwave1} \textsc{D-Wave Systems} (2014). Quantum Computing. Recuperado de http://www.dwavesys.com/quantum-computing
+\bibitem{dwave5} \textsc{D-Wave Systems} (2014). The D-Wave Two System. Recuperado de http://www.dwavesys.com/d-wave-two-system
+\bibitem{herken} \textsc{Herken, R. (Ed.)} (1988). \textit{The Universal Turing Machine. A Half-Century Survey.} Oxford University Press
 \bibitem{markoff} \textsc{Markoff, J.} (2014). Scientists Report Finding Reliable Way to Teleport Data. \textit{The New York Times} Recuperado de http://www.nytimes.com/2014/05/30/science/scientists-report-finding-reliable-way-to-teleport-data.html
 \bibitem{moore} \textsc{Moore, G.} (1965). Cramming more components onto integrated circuits. \textit{Electronics.} Vol 3., No. 8.
-\bibitem{nielsen} \textsc{Nielsen, M., Chuang, I.} (2010). \textit{Quantum Computation and Quantum Information.} (E. Arias, Trad.) New York: Cambridge University Press
-\bibitem{shankar} \textsc{Shankar, R.} (1994). \textit{Principles of Quantum Mechanics.} (E. Arias, Trad.) New York: Plenum Press
+\bibitem{nielsen} \textsc{Nielsen, M., Chuang, I.} (2010). \textit{Quantum Computation and Quantum Information.} New York: Cambridge University Press
+\bibitem{shankar} \textsc{Shankar, R.} (1994). \textit{Principles of Quantum Mechanics.} New York: Plenum Press
 \bibitem{turing} \textsc{Turing, A.} (1936). \textit{ON COMPUTABLE NUMBERS, WITH AN APPLICATION TO
-THE ENTSCHEIDUNGSPROBLEM.} (E. Arias, Trad.) Recuperado de http://classes.soe.ucsc.edu/cmps210/Winter11/Papers/turing-1936.pdf
+THE ENTSCHEIDUNGSPROBLEM.} Recuperado de http://classes.soe.ucsc.edu/cmps210/Winter11/Papers/turing-1936.pdf
 \bibitem{neumann} \textsc{Von Neumann, J.} (1945). \textit{First Draft of a Report on the EDVAC} University of Pennsylvania. Recuperado de http://www.virtualtravelog.net/wp/wp-content/media/2003-08-TheFirstDraft.pdf
 \end{thebibliography}
 
