--- a/investigacion.tex
+++ b/investigacion.tex
@@ -364,6 +364,7 @@ El D-Wave que compró Martin, cabe destacar que fue el primer D-Wave comercialme
 \bibitem{dwave6} \textsc{D-Wave Systems} (2014). Introduction to the D-Wave Quantum Hardware. Recuperado de http://www.dwavesys.com/tutorials/background-reading-series/introduction-d-wave-quantum-hardware
 \bibitem{dwave1} \textsc{D-Wave Systems} (2014). Quantum Computing. Recuperado de http://www.dwavesys.com/quantum-computing
 \bibitem{dwave5} \textsc{D-Wave Systems} (2014). The D-Wave Two System. Recuperado de http://www.dwavesys.com/d-wave-two-system
+\bibitem{feynman} \textsc{Feynman, R.} (1985). \textit{Quantum Mechanical Computers.} Recuperado de http://www.cs.princeton.edu/courses/archive/fall05/frs119/papers/feynman85_optics_letters.pdf
 \bibitem{herken} \textsc{Herken, R. (Ed.)} (1988). \textit{The Universal Turing Machine. A Half-Century Survey.} Oxford University Press
 \bibitem{markoff} \textsc{Markoff, J.} (2014). Scientists Report Finding Reliable Way to Teleport Data. \textit{The New York Times} Recuperado de http://www.nytimes.com/2014/05/30/science/scientists-report-finding-reliable-way-to-teleport-data.html
 \bibitem{moore} \textsc{Moore, G.} (1965). Cramming more components onto integrated circuits. \textit{Electronics.} Vol 3., No. 8.
